force-app/zurich-base/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <description>Entity in which to register relevant data of policies contracted by the Customer with competitors of Zurich.</description>
    <label>Competitor</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>