force-app/zurich-base/main/default/objects/Competitor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nombre del cliente del que se está registrando la competencia</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>