force-app/zurich-base/main/default/objects/Competitor__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Coverages in which the customer is or may be interested</description>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>