force-app/zurich-base/main/default/objects/Competitor__c/fields/ContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContactDate__c</fullName>
    <label>Contact Date</label>
    <type>Date</type>
</CustomField>