force-app/zurich-base/main/default/objects/Competitor__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Competitor</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>