force-app/zurich-base/main/default/objects/Competitor__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>Date the customer&apos;s policy expires.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>