force-app/zurich-base/main/default/objects/Competitor__c/fields/HiringInterest__c.field-meta.xml
<CustomField>
    <fullName>HiringInterest__c</fullName>
    <label>Existe interés de contratación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>