force-app/zurich-base/main/default/objects/Competitor__c/fields/InsuranceCompany__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompany__c</fullName>
    <label>Insurance Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InsuranceCompanies</valueSetName>
    </valueSet>
</CustomField>