force-app/zurich-base/main/default/objects/Competitor__c/fields/IntermediaryId__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Atributo que informa del código de mediador de la cuenta a la que se asocia la competencia</description>
    <label>Mediador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competencias (Mediador)</relationshipLabel>
    <relationshipName>Competencias</relationshipName>
    <type>Lookup</type>
</CustomField>