force-app/zurich-base/main/default/objects/Competitor__c/fields/IntermediaryIdOld__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryIdOld__c</fullName>
    <description>Guarda temporalmente el Id del mediador para calcular la visibilidad</description>
    <label>IntermediaryIdOld</label>
    <length>18</length>
    <type>Text</type>
</CustomField>