force-app/zurich-base/main/default/objects/Competitor__c/fields/NonHiringReason__c.field-meta.xml
<CustomField>
    <fullName>NonHiringReason__c</fullName>
    <description>Motivo de no contratación en caso de que el cliente confirme que optará por la competencia</description>
    <label>Motivo de no contratación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotInformedByClient</fullName>
                <label>Cliente no informa</label>
            </value>
            <value>
                <fullName>HighPrice</fullName>
                <label>Precio elevado</label>
            </value>
            <value>
                <fullName>InsufficientCoverage</fullName>
                <label>Coberturas insuficientes</label>
            </value>
            <value>
                <fullName>Unresponded</fullName>
                <label>Cliente no responde</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>