force-app/zurich-base/main/default/objects/Competitor__c/fields/OfferWon__c.field-meta.xml
<CustomField>
    <fullName>OfferWon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the competitor&apos;s policy has been successfully brought to Zurich</description>
    <label>Offer Won</label>
    <type>Checkbox</type>
</CustomField>