force-app/zurich-base/main/default/objects/Competitor__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <description>Insurance premium</description>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>