force-app/zurich-base/main/default/objects/Competitor__c/fields/ProductBranch__c.field-meta.xml
<CustomField>
    <fullName>ProductBranch__c</fullName>
    <label>Product Branch</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ProductBranches</valueSetName>
    </valueSet>
</CustomField>