force-app/zurich-base/main/default/objects/Competitor__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductTypes</valueSetName>
    </valueSet>
</CustomField>